--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,37 @@
 
 body {
   margin: 0;
+  background-color: #65668c;
 }
 
 header {
   margin: 0 auto;
   width: 1000px;
+  background-image: url(../images/flag.jpg);
+  color: #7e0f12;
+  font-family: sans-serif;
+  font-size: 100%;
+  font-weight: bolder;
 }
 
 header h1 {
   text-align: center;
   margin: 0;
   padding-top: .25em;
+  color: #bb010a;
+  font-family: sans-serif;
+  font-size: 170%;
+  font-weight: bolder;
 }
 
 header h2 {
   text-align: center;
   margin: 0;
   padding-bottom: 1em;
+  color: #9d0609;
+  font-family: sans-serif;
+  font-size: 150%;
+  font-weight: normal;
 }
 
 h3 {
@@ -38,10 +52,13 @@ nav {
   width: 1000px;
   padding: 5px 0;
   text-align: center;
+  background-color: #a5797b;
+  border:
 }
 
 nav a {
   margin: 0 35px;
+  background-color: #65668c;
 }
 
 .floatright {
@@ -53,4 +70,11 @@ nav a {
   margin: 0 auto;
   width: 1000px;
   padding: 5px 15px;
+  background-color: #6f6f81;
+  font-family: sans-serif;
+  font-size: 100%;
+  font-weight: normal;
+}
+ul {
+  list-style-image: url(../images/star.png);
 }
